Rename custom.css to be more descriptive, add geoserver-ie.css to allow IE renderbug squashing without altering blueprint files, first round of IE renderbug fixes
git-svn-id: http://svn.codehaus.org/geoserver/trunk@9871 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: 2065312b86697fb1ce1d7547b0f2e17cb90f8ed8 [formerly aa2219923800cb4b7334c3b14b3df5dd2a8db6f4]
Former-commit-id: 416111c34abff743f6add62d0d355f9e948f3f7f

--- a/geoserver/community/web2/core/src/main/java/org/geoserver/web/css/geoserver.css
+++ b/geoserver/community/web2/core/src/main/java/org/geoserver/web/css/geoserver.css
@@ -120,6 +120,7 @@ padding: 5px;
 #sidebar, 
 #page {
 padding: 0 20px;
+text-align: left; /* IE */
 }
 
 #sidebar {
@@ -207,7 +208,7 @@ border: 0 none transparent;
 
 legend span { 
 position: absolute;
-width: 35em;
+width: 29.2em;
 top: -1.5em;
 left: 0;
 }
@@ -636,7 +637,7 @@ font-style: italic;
 border: 1px solid #bbb;
 border-width: 0 0 1px;
 height: 2.1em;
-margin: 1.5em 0 1em;
+margin: 1.5em 0 2.5em;
 }
 
 .tab-row ul {
